# ca_backend

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  ca_server.yml  copy.sh  gcloud_credentials.json.example  order.json  subscribe.json
admin/: Cargo.toml
admin/src/: main.rs
articles/: kriya-yoga-intro.md
ca_admin/: Cargo.toml
ca_admin/src/: hash.rs  main.rs
ca_database/: Cargo.toml  docker-compose.yml
ca_database/configuration/: base.yaml
ca_database/migrations/: 20231002190232_test.down.sql  20231002190232_test.up.sql  create_articles_table.sql
ca_database/prepared_statements/: article_delete.sql  article_upsert.sql  articles.sql
ca_database/prepared_statements/articles/: article.sql  article_upsert.sql
ca_database/prepared_statements/audios/: audio.sql  audio_delete.sql  audio_upsert.sql  audios.sql
ca_database/prepared_statements/courses/: course.sql  course_delete.sql  course_upsert.sql
ca_database/prepared_statements/images/: image.sql  image_delete.sql  image_upsert.sql
ca_database/prepared_statements/videos/: video.sql  video_delete.sql  video_upsert.sql
ca_database/scripts/: init_db.sh  mock_data.sql
ca_database/src/: client.rs  configurations.rs  handler.rs  hash.rs  lib.rs  settings.rs  statement_builder.rs  types.rs
ca_database/tests/: accounts.rs  helpers.rs  main.rs
ca_server/: Cargo.toml
ca_server/src/: main.rs
data/articles/: 10_Ways_to_Achieve_Peace.md  5_Steps_to_Manifesting_Your_Dream_Life.md  6_Signs_You_Haven't_Fully_Forgiven.md  7_Ways_To_Ace_Life_The_Inward_Way.md  8_Powerful_Manifestation_Tips.md  8_Ways_To_Dramatically_Increase_Your_Level_of_Consciousness.md  9_Truths_to_Raise_Your_Level_of_Consciousness.md  A_Solid_Self-Concept_Looks_Like_This.md  Anonymous_Acts_of_Love_Challenge.md  How_to_Get_Rid_of_Your_Limiting_Beliefs.md  Manifestation_Mistake_1_Stop_Manifesting_the_Middle.md  Relationship_Hack_1.md  Understanding_Self-Love.md  Understanding_Soul_Contracts.md  Understanding_Why_You_Incarnated.md  Understanding_the_Difference_Between_Your_Small_Self_and_Your_Higher_Self.md  Understanding_the_Point_of_Human_Experience.md  Understanding_the_Point_of_the_Human_Experience.md  What_Does_a_Solid_Self-Concept_Look_Like.md  Why_Animals_are_so_Easy_to_Love.md  articles.json
data/calibrations/: books.json  movies.json  people.json  sports.json  teachings.json
data/category_images/: category_images.json
data/content_type_images/: content_type_images.json
data/testimonial_images/: testimonial_images.json
data/testimonials/: testimonials.json
database/: Cargo.toml
database/src/: hash.rs  lib.rs  types.rs
docker/: ca_server.dockerfile  init.sh
migrations/: 20231002190232_test.up.sql  20231002194555_test.up.sql  20231003123353_test.up.sql  20231003160521_test.down.sql  20231003160521_test.up.sql
scripts/: evernote2md.sh  mock_data.sh  rename_testimonial_images.sh  upsert_articles.sh  upsert_calibrations.sh  upsert_category_images.sh  upsert_content_type_images.sh  upsert_testimonial_images.sh  upsert_testimonials.sh
server/: Cargo.toml
server/src/: errors.rs  handler.rs  main.rs  oauth.rs  types.rs  utils.rs
server/src/square/: card.rs  catalog.rs  checkout.rs  client.rs  coaching_package.rs  customer.rs  error.rs  invoice.rs  mod.rs  order.rs  subscription.rs  webhook.rs
server/src/types/: card.rs  catalog.rs  checkout.rs  customer.rs  invoice.rs  location.rs  mod.rs  order.rs  subscription.rs
src/: main.rs
