[workspace]
members = [
    "ca_server",
    "ca_database"
]

[workspace.package]
version = "0.1.0"
authors = ["Consciousness Archive <info@consciousnessarchive.com>"]
repository = "https://github.com/0xBreath/consciousness-archive-server"
homepage = "https://consciousnessarchive.com/"
license = "Apache-2.0"
edition = "2021"