[workspace]
members = [
    "server",
    "database",
    "admin"
]

[workspace.package]
version = "0.1.0"
authors = ["Consciousness Archive <info@consciousnessarchive.com>"]
repository = "https://github.com/0xBreath/ca_backend"
homepage = "https://consciousnessarchive.com/"
license = "Apache-2.0"
edition = "2021"