[package]
name = "ca_admin"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca_database = { path = "../ca_database" }
tokio = { version = "1.24.1", features = ["full"] }
log = "0.4"
simplelog = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
clap = { version = "3.2.23", features = ["derive", "deprecated"] }
image = "0.24.7"
anyhow = "1.0.40"
postgres-types = { version = "0.2.4", features = ["array-impls", "derive"]}
tokio-postgres = { version = "=0.7.6", features = ["array-impls"] }
bincode = "1.3.3"
