[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
actix-web = "4"
actix-cors = "0.6.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4.22"
regex = "1.7.3"
tokio = { version = "1.24.1", features = ["full"] }
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.6"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
url = "2.2.2"
error-chain = { version = "0.12.4", default-features = false }
lazy_static = "1.4.0"
simplelog = "0.12.0"
log = "0.4"
time = "0.3.14"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
dotenv = "0.15.0"
bincode = "1.3.3"
anyhow = "1.0.40"
uuid = { version = "1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
alcoholic_jwt = "4091.0.0"
derive_more = "0.99.17"
actix-web-httpauth = "0.8.1"
google-cloud-storage = { version = "0.14.0", features = ["default"] }